Added Github page of the project als homepage of the extension.

--- a/Info.plist
+++ b/Info.plist
@@ -43,6 +43,6 @@
 		</dict>
 	</dict>
 	<key>Website</key>
-	<string>http://webadventures.at</string>
+	<string>https://github.com/florianeckerstorfer/disable-snapengage.safariextension</string>
 </dict>
 </plist>
